# struqture

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTE.md  Cargo.toml  Migration_Guide.md  README.md  book.toml  deny.toml  example.html  index.html  interfaces.html  introduction.html  print.html  searcher-09f2665d.js  searcher-c2a407aa.js  searchindex-6c236516.js  searchindex-f02c86ef.js  searchindex.js  searchindex.json  toc-ad5dc8c1.js  toc-cdd571b0.js  toc.html  toc.js
struqture/: Cargo.toml  README.md
struqture-py/: Cargo.toml  README.md  README_struqture.md  build.rs  pyproject.toml
struqture-py-macros/: Cargo.toml
struqture-py-macros/src/: lib.rs  mappings.rs  noiseless_system_wrapper.rs  noisy_system_wrapper.rs  product_wrapper.rs
struqture-py/docs/: Makefile  conf.py  requirements.txt
struqture-py/python_tests/: indices_test.py  mappings_test.py  mappings_tests.py  openfermion_test.py
struqture-py/src/: lib.rs
struqture-py/src/bosons/: boson_product.rs  bosonic_hamiltonian.rs  bosonic_hamiltonian_system.rs  bosonic_noise_operator.rs  bosonic_noise_system.rs  bosonic_open_system.rs  bosonic_operator.rs  bosonic_system.rs  hermitian_boson_product.rs  mod.rs
struqture-py/src/fermions/: fermion_product.rs  fermionic_hamiltonian.rs  fermionic_hamiltonian_system.rs  fermionic_noise_operator.rs  fermionic_noise_system.rs  fermionic_open_system.rs  fermionic_operator.rs  fermionic_system.rs  hermitian_fermion_product.rs  mod.rs
struqture-py/src/mixed_systems/: mixed_decoherence_product.rs  mixed_hamiltonian.rs  mixed_hamiltonian_system.rs  mixed_hermitian_product.rs  mixed_noise_operator.rs  mixed_noise_system.rs  mixed_open_system.rs  mixed_operator.rs  mixed_plus_minus_operator.rs  mixed_plus_minus_product.rs  mixed_product.rs  mixed_system.rs  mod.rs
struqture-py/src/spins/: decoherence_product.rs  mod.rs  pauli_hamiltonian.rs  pauli_noise_operator.rs  pauli_open_system.rs  pauli_operator.rs  pauli_product.rs  plus_minus_noise_operator.rs  plus_minus_operator.rs  plus_minus_product.rs  qubit_hamiltonian.rs  qubit_noise_operator.rs  qubit_open_system.rs  qubit_operator.rs  spin_hamiltonian.rs  spin_hamiltonian_system.rs  spin_noise_operator.rs  spin_noise_system.rs  spin_open_system.rs  spin_operator.rs  spin_system.rs
struqture-py/struqture_py/: DEPENDENCIES  LICENSE_FOR_BINARY_DISTRIBUTION  __init__.py  bosons.pyi  fermions.pyi  mixed_systems.pyi  openfermion_interface.py  spins.pyi  struqture_py.pyi
struqture-py/tests/: main.rs
struqture-py/tests/bosons/: bosonic_hamiltonian.rs  bosonic_hamiltonian_system.rs  bosonic_noise_operator.rs  bosonic_noise_system.rs  bosonic_open_system.rs  bosonic_operator.rs  bosonic_product.rs  bosonic_system.rs  hermitian_bosonic_product.rs  mod.rs
struqture-py/tests/fermions/: fermionic_hamiltonian.rs  fermionic_hamiltonian_system.rs  fermionic_noise_operator.rs  fermionic_noise_system.rs  fermionic_open_system.rs  fermionic_operator.rs  fermionic_product.rs  fermionic_system.rs  hermitian_fermionic_product.rs  mod.rs
struqture-py/tests/mixed_systems/: mixed_decoherence_product.rs  mixed_hamiltonian.rs  mixed_hamiltonian_system.rs  mixed_hermitian_product.rs  mixed_noise_operator.rs  mixed_noise_system.rs  mixed_open_system.rs  mixed_operator.rs  mixed_plus_minus_operator.rs  mixed_plus_minus_product.rs  mixed_product.rs  mixed_system.rs  mod.rs
struqture-py/tests/spins/: decoherence_product.rs  mod.rs  noise_system.rs  open_system.rs  pauli_hamiltonian.rs  pauli_noise_operator.rs  pauli_open_system.rs  pauli_operator.rs  pauli_product.rs  plus_minus_noise_operator.rs  plus_minus_operator.rs  plus_minus_product.rs  qubit_hamiltonian.rs  qubit_noise_operator.rs  qubit_open_system.rs  qubit_operator.rs  spin_hamiltonian.rs  spin_hamiltonian_system.rs  spin_noise_operator.rs  spin_open_system.rs  spin_operator.rs  spin_system.rs
struqture/src/: lib.rs  prelude.rs  serialisation_meta_information.rs
struqture/src/bosons/: bosonic_hamiltonian.rs  bosonic_hamiltonian_system.rs  bosonic_indices.rs  bosonic_noise_operator.rs  bosonic_noise_system.rs  bosonic_open_system.rs  bosonic_operator.rs  bosonic_system.rs  mod.rs
struqture/src/fermions/: .#fermionic_open_system.rs  fermionic_hamiltonian.rs  fermionic_hamiltonian_system.rs  fermionic_indices.rs  fermionic_noise_operator.rs  fermionic_noise_system.rs  fermionic_open_system.rs  fermionic_operator.rs  fermionic_system.rs  mod.rs
struqture/src/mappings/: boson_spin.rs  jordan_wigner.rs  mod.rs
struqture/src/mixed_systems/: mixed_decoherence_product.rs  mixed_hamiltonian.rs  mixed_hamiltonian_system.rs  mixed_hermitian_product.rs  mixed_noise_operator.rs  mixed_noise_system.rs  mixed_open_system.rs  mixed_operator.rs  mixed_plus_minus_operator.rs  mixed_plus_minus_product.rs  mixed_product.rs  mixed_system.rs  mod.rs
struqture/src/spins/: decoherence_operator.rs  decoherence_product.rs  mod.rs  pauli_hamiltonian.rs  pauli_noise_operator.rs  pauli_open_system.rs  pauli_operator.rs  pauli_product.rs  plus_minus_noise_operator.rs  plus_minus_operator.rs  plus_minus_product.rs  qubit_hamiltonian.rs  qubit_noise_operator.rs  qubit_open_system.rs  qubit_operator.rs  spin_hamiltonian.rs  spin_hamiltonian_system.rs  spin_noise_operator.rs  spin_noise_system.rs  spin_open_system.rs  spin_operator.rs  spin_system.rs
struqture/tests/: main.rs
struqture/tests/bosons/: bosonic_hamiltonian.rs  bosonic_hamiltonian_system.rs  bosonic_noise_operator.rs  bosonic_noise_system.rs  bosonic_open_system.rs  bosonic_operator.rs  bosonic_product.rs  bosonic_system.rs  hermitian_bosonic_product.rs  mod.rs
struqture/tests/fermions/: fermionic_hamiltonian.rs  fermionic_hamiltonian_system.rs  fermionic_noise_operator.rs  fermionic_noise_system.rs  fermionic_open_system.rs  fermionic_operator.rs  fermionic_product.rs  fermionic_system.rs  hermitian_fermionic_product.rs  mod.rs
struqture/tests/mappings/: boson_to_spin.rs  jordan_wigner.rs  jordan_wigner_fermion_to_spin.rs  jordan_wigner_spin_to_fermion.rs  mod.rs
struqture/tests/mixed_systems/: mixed_decoherence_product.rs  mod.rs  (+11 more)
(+144 files in other folders)
