[workspace]
members = ["struqture", "struqture-py"]

resolver = "2"

[profile.release]
lto = true

[profile.bench]
lto = true

[patch.crates-io]
qoqo_calculator = { git = "https://github.com/dberthault/qoqo_calculator.git" }
qoqo_calculator_pyo3 = { git = "https://github.com/dberthault/qoqo_calculator.git" }
