[package]
name = "struqture-py-macros"
version = "2.0.0-alpha.13"
authors = ["HQS Quantum Simulations <info@quantumsimulations.de>"]
edition = "2021"
rust-version = "1.76"
categories = ["science", "simulation"]
description = "Macros for struqture-py crate."
license = "Apache-2.0"
include = ["src*", "Cargo.toml", "LICENSE"]

[lib]
proc-macro = true
doctest = false

[dependencies]
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["full", "visit"] }
quote = "1.0"
