[package]
name = "struqture-py"
version = "1.12.1"
authors = ["HQS Quantum Simulations <info@quantumsimulations.de>"]
edition = "2021"
rust-version = "1.76"
categories = ["science", "simulation"]
description = "Python interface of struqture, the HQS tool for representing operators, Hamiltonians and open systems."
license = "Apache-2.0"
include = ["src*", "struqture_py", "Cargo.toml", "build.rs", "pyproject.toml"]
readme = "../README.md"

[lib]
name = "struqture_py"
path = "src/lib.rs"
doctest = false
crate-type = ["cdylib", "rlib"]

[dependencies.pyo3]
version = "0.23"
features = ["num-complex", "multiple-pymethods"]

[dependencies]
struqture = { version = "~1.12", path = "../struqture", default-features = false }
struqture_2 = { package = "struqture", version = "2.0.0-alpha.11", default-features = false, features = [
    "struqture_1_import",
    "struqture_1_export",
], optional = true }
struqture-py-macros = { version = "~1.12", path = "../struqture-py-macros" }
qoqo_calculator = { version = ">=1.5", default-features = false }
qoqo_calculator_pyo3 = { version = " ~1.5", default-features = false }

numpy = "0.23"
bincode = "1.3"
serde_json = "1.0"
thiserror = "2.0"
num-complex = "0.4"
schemars = "0.8"

[dev-dependencies]
test-case = "3.1"
nalgebra = "0.33"
ndarray = "0.16"

[build-dependencies]
quote = "1.0"
syn = { version = "2.0", features = ["full", "visit"] }
proc-macro2 = "1.0"
pyo3-build-config = "0.23"
pyo3 = "0.23"
regex = "1.10"

[package.metadata.docs.rs]
no-default-features = true

[features]
extension-module = [
    "pyo3/extension-module",
]
default = ["extension-module", "json_schema", "indexed_map_iterators"]
json_schema = ["struqture/json_schema"]
doc_generator = []
indexed_map_iterators = ["struqture/indexed_map_iterators"]
unstable_struqture_2_import = ["struqture_2"]
