[package]
name = "struqture-py"
version = "2.4.1"
authors = ["HQS Quantum Simulations <info@quantumsimulations.de>"]
edition = "2021"
rust-version = "1.76"
categories = ["science", "simulation"]
description = "Python interface of struqture, the HQS tool for representing operators, Hamiltonians and open systems."
license = "Apache-2.0"
include = ["src*", "struqture_py", "Cargo.toml", "build.rs", "pyproject.toml"]
readme = "README.md"

[lib]
name = "struqture_py"
path = "src/lib.rs"
doctest = false
crate-type = ["cdylib", "rlib"]

[dependencies.pyo3]
version = "0.25"
features = ["num-complex", "multiple-pymethods"]

[dependencies]
struqture = { version = "2.3", path = "../struqture", default-features = false }
struqture_1 = { package = "struqture", version = ">=1.12,<2.0.0", optional = true, default-features = false }
struqture-py-macros = { version = "2.3", path = "../struqture-py-macros" }
qoqo_calculator = { version = "1.7", default-features = false }
qoqo_calculator_pyo3 = { version = "1.7", default-features = false }

bincode = { version = "2.0", default-features = false, features = ["std", "serde"] }
serde_json = "1.0"
thiserror = "2.0"
num-complex = "0.4"
schemars = "1.0"
numpy = "0.25"

[dev-dependencies]
test-case = "3.1"
nalgebra = "0.34"
ndarray = "0.16"

[build-dependencies]
quote = "1.0"
syn = { version = "2.0", features = ["full", "visit"] }
proc-macro2 = "1.0"
pyo3-build-config = "0.25"
pyo3 = "0.25"
regex = "1.10"

[package.metadata.docs.rs]
no-default-features = true

[features]
extension-module = ["pyo3/extension-module"]
default = [
    "extension-module",
    "json_schema",
    "struqture_1_export",
    "struqture_1_import",
]
json_schema = ["struqture/json_schema"]
struqture_1_export = [
    "struqture_1",
    "struqture/struqture_1_export",
    "struqture/struqture_1_import",
]
struqture_1_import = [
    "struqture_1",
    "struqture/struqture_1_import",
    "struqture/struqture_1_export",
]
doc_generator = []
