[project]
name = "struqture-py"
version = "2.0.0-alpha.1"
dependencies = [
  'numpy',
  'qoqo_calculator_pyo3>=1.2,<1.3',
]
license = { text = "Apache-2.0 AND Apache-2.0 with LLVM-exception AND MIT AND Unicode-DFS-2016 AND BSD-2-Clause AND BSD-3-CLause" }
maintainers = [
  { name = "HQS Quantum Simulations GmbH", email = "info@quantumsimulations.de" },
]
requires-python = ">=3.8"
readme = "README.md"

[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"

[tool.maturin]
bindings = "pyo3"
compatibility = "manylinux2014"
strip = true
profile = "release"
include = [{ path = "LICENSE", format = "sdist" }]

