[project]
name = "struqture-py"
version = "2.0.0-alpha.14"
dependencies = ['numpy', 'qoqo_calculator_pyo3>=1.4']
license = { text = "Apache-2.0 AND Apache-2.0 with LLVM-exception AND MIT AND Unicode-DFS-2016 AND BSD-2-Clause AND BSD-3-CLause" }
maintainers = [
  { name = "HQS Quantum Simulations GmbH", email = "info@quantumsimulations.de" },
]
requires-python = ">=3.9"
readme = "README.md"

[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"

[tool.maturin]
bindings = "pyo3"
compatibility = "manylinux2014"
strip = true
profile = "release"
include = [{ path = "LICENSE", format = "sdist" }]

[project.optional-dependencies]
docs = [
  "sphinx >= 2.1",
  "nbsphinx",
  "pygments",
  "recommonmark",
  "myst_parser",
  "sphinx_rtd_theme",
  "tomli",
]
