[package]
name = "struqture"
version = "1.9.1"
authors = ["HQS Quantum Simulations <info@quantumsimulations.de>"]
edition = "2021"
rust-version = "1.57"
categories = ["science", "simulation"]
description = "HQS tool for representing operators, Hamiltonians and open systems."
license = "Apache-2.0"
include = ["Cargo.toml", "src*", "LICENSE", "../README.md"]
readme = "../README.md"

[lib]
name = "struqture"
path = "src/lib.rs"
doctest = false

[dependencies]
qoqo_calculator = { version = "~1.2", default-features = false }
serde = { version = "1.0", features = ["derive"] }
num-complex = { version = "0.4" }
thiserror = "1.0"
test-case = "3.1"
itertools = "0.13"
ndarray = { version = "0.15" }
tinyvec = { version = "1.6", features = ["alloc", "serde"] }
schemars = { version = "0.8.12", optional = true }
indexmap = { version = "2", optional = true }

[dev-dependencies]
nalgebra = "0.33"
serde_test = { version = "1.0" }
bincode = "1.3"
serde_json = "1.0"
rand = "0.8"
jsonschema = { version = "0.18" }
criterion = { version = "0.5" }

[features]
default = ["json_schema"]
json_schema = ["schemars", "qoqo_calculator/json_schema"]
indexed_map_iterators = ["indexmap"]
