[package]
name = "struqture"
version = "2.0.0-alpha.13"
authors = ["HQS Quantum Simulations <info@quantumsimulations.de>"]
edition = "2021"
rust-version = "1.76"
categories = ["science", "simulation"]
description = "HQS tool for representing operators, Hamiltonians and open systems."
license = "Apache-2.0"
include = ["Cargo.toml", "src*", "LICENSE", "../README.md"]
readme = "README.md"

[lib]
name = "struqture"
path = "src/lib.rs"
doctest = false

[dependencies]
qoqo_calculator = { version = ">=1.5", default-features = false }
struqture_1 = { package = "struqture", version = ">=1.12,<2.0.0", optional = true, default-features = false }

serde = { version = "1.0", features = ["derive"] }
num-complex = { version = "0.4" }
thiserror = "2.0"
test-case = "3.1"
itertools = "0.14"
ndarray = "0.16"
tinyvec = { version = "1.6", features = ["alloc", "serde"] }
schemars = { version = "0.8.12", optional = true }
indexmap = { version = "2" }

[dev-dependencies]
nalgebra = "0.33"
serde_test = "1.0"
bincode = "1.3"
serde_json = "1.0"
rand = "0.9"
jsonschema = "0.29"
criterion = "0.5"

[features]
default = ["json_schema", "struqture_1_export", "struqture_1_import"]
json_schema = ["schemars", "qoqo_calculator/json_schema"]
struqture_1_export = ["struqture_1"]
struqture_1_import = ["struqture_1"]
